--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
+*.swp
+*.bak
+
 # Object files
 *.o
-*.ko
-*.obj
-*.elf
 
 # Libraries
 *.lib
@@ -18,6 +18,3 @@
 *.exe
 *.out
 *.app
-*.i*86
-*.x86_64
-*.hex
